benefits/static/css/styles.css
/* ... */
.radio-input-group:not(:first-child) {
  padding-top: calc(24rem / 16);
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: var(--radio-button-size);
  height: var(--radio-button-size);
  border: var(--border-width) solid var(--radio-input-color);
  margin: calc(3rem / 16) 0;
}

.radio-input:checked {
  background-color: var(--radio-input-color);
  box-shadow: inset 0 0 0 var(--border-width) var(--bs-white);
}

/* Media List */

:root {
  --media-item-icon-size: calc(64rem / 16);
  --media-item-gap: calc(24rem / 16);
  --media-item-icon-margin: calc(24rem / 16);
  --media-title-margin-top: calc(24rem / 16);
}

@media (min-width: 992px) {
  :root {
    --media-item-icon-size: calc(90rem / 16);
    --media-item-gap: calc(62rem / 16);
    --media-item-icon-margin: calc(32rem / 16);
    --media-title-margin-top: calc(64rem / 16);
  }
}

h1 + .media-list, /* A .media-list immediately following the h1: Enrollment Success, but not Eligibility Start */
.media-body--details p:not(:first-of-type) {
  /* All the p within .media-body--details, except for the first p - Any media item with more than one p */
  padding-top: calc(24rem / 16);
}

.media-title {
  margin-top: var(--media-title-margin-top);
  margin-bottom: calc(24rem / 16);
}

.media-list {
  gap: var(--media-item-gap);
  margin-bottom: calc(64rem / 16);
}

.media-list .media .media-line .icon {
  width: var(--media-item-icon-size);
  height: var(--media-item-icon-size);
  margin-right: var(--media-item-icon-margin);
}

.media-list .media .media-body--details,
.media-list .media .media-body--items li:first-child {
  padding-top: calc(5rem / 16);
}

.media-list .media .media-body--items li {
  list-style-type: disc;
}

/* Cards */

:root {
  --card-title-font-size: var(--font-size-18px);
  --card-title-line-height: calc(21.6rem / 16);
  --card-title-letter-spacing: 0.03em;
  --card-x-padding: calc(10rem / 16);
  --card-body-x-padding: 0;
  --card-body-y-padding: 0.75rem;
  --card-border-width: var(--font-size-12px);
  --card-max-width: 100%;
  --card-min-height: 100%;
}

@media (min-width: 992px) {
  :root {
    --card-title-font-size: var(--font-size-20px);
    --card-title-line-height: calc(24rem / 16);
    --card-title-letter-spacing: 0.05rem;
    --card-x-padding: calc(35rem / 16);
    --card-body-x-padding: calc(40rem / 16);
    --card-body-y-padding: 0;
    --card-border-width: var(--font-size-20px);
    --card-max-width: calc(340rem / 16);
    --card-min-height: calc(185rem / 16);
  }
}

a.card,
a.card:hover,
a.card:focus,
a.card:focus-visible {
  text-decoration: none;
}

.card {
  height: 75%;
  border-top: solid var(--card-border-width) var(--primary-color);
  border-radius: 8px;
  transition: 0.3s;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  padding: var(--card-body-y-padding) var(--card-x-padding);
  max-width: var(--card-max-width);
  min-height: var(--card-min-height);
}

.card:hover {
  border-top: solid var(--card-border-width) var(--hover-color);
}

.card .card-title {
  font-size: var(--card-title-font-size);
  line-height: var(--card-title-line-height);
  letter-spacing: var(--card-title-letter-spacing);
}

.card .card-body {
  padding: 0 var(--card-body-x-padding) !important;
}

/* Modal Dialogs */

:root {
  --modal-title-font-size: var(--font-size-24px);
  --modal-border-radius: 8px;
}

@media (min-width: 992px) {
  :root {
    --modal-title-font-size: var(--font-size-35px);
    --modal-border-radius: 4px;
  }
}

.modal-dialog {
  width: auto;
  height: auto;
}

.modal-content {
  border-radius: var(--modal-border-radius);
}

/* This is to stop Bootstrap from shifting the page behind the modal - see https://stackoverflow.com/q/32862394 */
.modal-open {
  padding-right: 0 !important;
}

.modal-dialog * {
  color: var(--text-primary-color);
}

.btn-close {
  color: var(--text-primary-color);
}

.modal-title {
  font-size: var(--modal-title-font-size);
}

/* Enrollment Success */
/* Custom in-line log out button for Enrollment Success, in paragraph */

:root {
  --logout-paragraph-margin-left: calc(
    var(--media-item-icon-margin) + var(--media-item-icon-size)
  );
}

@media (min-width: 992px) {
  :root {
    --logout-paragraph-margin-left: 0;
  }
}

.enrollment-success #login {
  padding: 0 0.5rem 0.3rem 0.6rem;
  display: inline-block;
  margin: 0;
  width: inherit;
  border-radius: 0;
}

.enrollment-success #login .fallback-text {
  padding-top: 14px;
  margin: 8px auto 0 auto;
  display: block;
  width: 7rem;
}

.enrollment-success .logout-paragraph {
  margin-left: var(--logout-paragraph-margin-left);
}

/* Index and Agency Index (Landing pages) */
/* These pages have a full-width and full-height background image, creating the need to re-set the Footer margin top to 0 */

:root {
  --landing-main-height: 100vh;
  --landing-background: url("/static/img/benefits-bg-mobile.jpg") no-repeat
    var(--primary-color);
  --landing-box-background: var(--bs-white);
  --landing-box-border: 12px solid var(--primary-color);
  --landing-text-color: var(--text-primary-color);
  --agency-index-box-background: var(--bs-white);
  --agency-index-box-border: 12px solid var(--primary-color);
  --agency-index-text-color: var(--text-primary-color);
  --landing-page-x-margin: auto;
}

@media (min-width: 992px) {
  :root {
    --landing-main-height: calc(
      100vh - 130px
    ); /* 130px = Header Height (80px) + (Footer Link (50px) */
    --landing-background: url("/static/img/benefits-bg-desktop.jpg") no-repeat;
    --landing-box-background: transparent;
    --landing-box-border: none;
    --landing-text-color: var(--bs-white);
    --landing-page-x-margin: 0;
  }
}

.landing main#main-content {
  min-height: var(--landing-main-height);
  background: var(--landing-background);
  background-size: cover;
}

.landing main#main-content .container .row:first-child {
  min-height: var(--landing-main-height);
}
/* ... */

